# test-actions

./: .drone.yml  .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
manifests/: deployment.yaml
tests/: test_cli_atago.py
