[tool.poetry]
name = "cli-atago"
version = "0.1.1"
description = ""
authors = ["Abdullah Tago Jr <abdullahjrtago@gmail.com>"]

[tool.poetry.scripts]
amtago = 'cli_atago.cli:process'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
funcy = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
